--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="2025/3/12 ChatGPT镜像网站列表-ChatGPT镜像网站整理合集">
     <meta property="og:description" content="ChatGPT 中文版是 OpenAI 开发的 ChatGPT 模型的中文优化版本，专为中文用户提供更流畅、更精准的智能对话。全面体验 ChatGPT 中文版，无需翻墙，支持 GPT-4、4o、o1 和本地化功能。本项目为用户提供一站式的 ChatGPT 中文版使用指南，包括国内可用的 ChatGPT 镜像网站推荐和使用教程，帮助快速上手 ChatGPT，无论是个人使用还是专业需求，均可无限使用 ChatGPT-4、GPT-4o 和 o1、o3及 DeepSeek R1！">
-    <meta property="og:url" content="https://gpthomechat.com/index.html">
+    <meta property="og:url" content="https://chatgpt-chinese-version.github.io/ChatGPT-web/">
     <meta property="og:type" content="website">
     <meta property="twitter:title" content="2025年最新ChatGPT镜像网站">
     <meta property="twitter:description" content="ChatGPT 中文版是 OpenAI 开发的 ChatGPT 模型的中文优化版本，专为中文用户提供更流畅、更精准的智能对话。全面体验 ChatGPT 中文版，无需翻墙，支持 GPT-4、4o、o1 和本地化功能。本项目为用户提供一站式的 ChatGPT 中文版使用指南，包括国内可用的 ChatGPT 镜像网站推荐和使用教程，帮助快速上手 ChatGPT，无论是个人使用还是专业需求，均可无限使用 ChatGPT-4、GPT-4o 和 o1、o3及 DeepSeek R1！">
@@ -239,7 +239,7 @@
     </div>
     <!-- 页脚 -->
     <footer>
-        <p>© 2024 ChatGPT官网中文版 | <a href="privacy.html">隐私政策</a> | <a href="terms.html">使用条款</a></p>
+        <p>© 2025 ChatGPT官网中文版 | <a href="privacy.html">隐私政策</a> | <a href="terms.html">使用条款</a></p>
     </footer>
 </body>
 </html>
