--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <body>
     <!-- Header with gradient background and CTA button -->
     <header>
-        <h1>ChatGPT网页版镜像网站</h1>
+        <h1>ChatGPT镜像网站</h1>
         <p>想要快速体验 ChatGPT 网页版镜像网站？无需翻墙即可轻松使用 GPT-o1、GPT-4、GPT-4o 和 Claude 等高级模型。</p>
         <a href="https://gptcat.net" class="cta">开始对话</a>
     </header>
